implelemtando um simulador real da loteria caixa