@@ -1,27 +1,36 @@
 package com.api.loteria.ultil;
 
-import java.util.HashSet;
-import java.util.Random;
-import java.util.Set;
-import java.util.TreeSet;
+import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
-public abstract class GeradorNumerosMega {
+public final class GeradorNumerosMega {
     private static final Random random = new Random();
-
-    public static Set<Integer> sortearNumerosAleatorios(int quantidade, int max) {
-        return IntStream.generate(() -> random.nextInt(max) + 1) 
-                .distinct() // Remove duplicados
-                .limit(quantidade) // Mantém apenas 6 números
-                .boxed() // Converte para Integer
-                .collect(Collectors.toSet()); // Retorna como Set
+    private static final List<String> MESES = List.of(
+            "Janeiro", "Fevereiro", "Março", "Abril", "Maio", "Junho",
+            "Julho", "Agosto", "Setembro", "Outubro", "Novembro", "Dezembro"
+    );
+    private GeradorNumerosMega() {
+        throw new UnsupportedOperationException("Classe utilitária");
     }
-    public static Set<Integer> gerarNumerosAleatorios(int quantidade, int max) {
-        Set<Integer> numeros = new TreeSet<>();
-        while (numeros.size() < quantidade) {
-            numeros.add(random.nextInt(max) + 1);
+    public static Set<Object> simuladorGloboDaSorte(int quantidade, int max) {
+        List<Integer> bolinhas = new ArrayList<>();
+        for (int i = 1; i <= max; i++) bolinhas.add(i);
+
+        Set<Object> numerosSorteados = new LinkedHashSet<>();
+
+        for (int i = 0; i < quantidade; i++) {
+            Collections.shuffle(bolinhas, random); // gira urna
+            numerosSorteados.add(bolinhas.remove(0)); // pega a bolinha
         }
-        return Set.copyOf(numeros);
+        return new TreeSet<>(numerosSorteados);
+    }
+
+    public static Set<Object> geradorDeMesAleatorio(){
+        return Collections.singleton(MESES.get(random.nextInt(MESES.size())));
+    }
+    public static Set<Object> gerarLotoManiaNumerosAleatorios(int quantidade, int max){
+        return simuladorGloboDaSorte(50, 100).stream()
+                .map(n -> n.equals(100) ? "00" : n)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
     }
 }
